fixed css to handle heigth overflow

--- a/privacy-share-buttons/css/socialshareprivacy.css
+++ b/privacy-share-buttons/css/socialshareprivacy.css
@@ -1,6 +1,6 @@
-.social_share_privacy {width:100%;}
-.social_share_privacy_area ul {position:relative;}
-.social_share_privacy_area li {float:left; list-style-type:none !important; list-style:none !important;}
+.social_share_privacy {width:100%; heigth: 25px;}
+.social_share_privacy_area ul {position:relative; heigth: 25px; }
+.social_share_privacy_area li {float:left; heigth: 25px; list-style-type:none !important; list-style:none !important;}
 .social_share_privacy_area li .dummy_btn {cursor:pointer;}
 
 /* Tooltips */
